--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -31,5 +31,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add last_post_id.txt
-          git commit -m "Update last processed community post" || echo "No changes"
+          git diff --cached --quiet || git commit -m "Update last processed community post"
           git push
